k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: aira-backend-nodeport
  namespace: aira
  labels:
    app: aira
    component: backend
spec:
  type: NodePort
  selector:
    app: aira
    component: backend
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30500
    protocol: TCP
    name: http
